--- a/styles/style3.css
+++ b/styles/style3.css
@@ -54,9 +54,10 @@ nav a:hover {
 }
 
 .featured-image {
-    width: 100% !important;
-    height: auto !important;
-    object-fit: contain !important;
+    width: 100%;
+    max-height: 300px;
+    object-fit: contain;
+    object-position: center;
 }
 
 .card {
@@ -84,7 +85,7 @@ main {
   flex: 5;
   display: flex;
   flex-flow: column nowrap;
-  gap: 1rem;
+  gap: 1rem 2rem;
 }
 
 aside {
@@ -95,36 +96,23 @@ header {
   display: iniline;
 }
 
-/* Tablet */
 @media screen and (max-width: 1200px) {
-  main {
-    flex-flow: column nowrap;
-  }
+    main {
+        flex-flow: column nowrap;
+    }
 
-  aside {
-    align-self: center;
-    width: 100%;
-  }
+    main aside {
+        align-self: center;
+    }
 }
 
-/* HP */
+
 @media screen and (max-width: 768px) {
-  nav ul {
-    flex-direction: column;
-    align-items: center;
-  }
+    nav ul {
+        justify-content: center;
+    }
 
-  nav a {
-    display: block;
-    width: 100%;
-    text-align: center;
-  }
-
-  aside {
-    width: 100%;
-  }
+    main aside {
+        align-self: stretch;
+    }
 }
-
-
-
-
