--- a/styles/style3.css
+++ b/styles/style3.css
@@ -60,6 +60,14 @@ nav a:hover {
     object-position: center;
 }
 
+.profile header {
+    text-align: center;
+}
+
+.profile img {
+    width: 200px;
+}
+
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 10px;
@@ -116,3 +124,4 @@ header {
         align-self: stretch;
     }
 }
+
